--- a/Resources/translations/messages.en.yml
+++ b/Resources/translations/messages.en.yml
@@ -1,8 +1,8 @@
 batch_jobs:
     snowio_complete_export:
-        label: "Full Published Export (published products, variant groups, categories, attributes, attribute options, families and attribute groups)"
+        label: "Full Published Export (published products, product models, categories, attributes, attribute options, families and attribute groups)"
         product.label: "Published Product Export Step"
-        variant_group.label: "Variant Group Export Step"
+        product_model.label: "Product Model Export Step"
         category.label:  "Category Export Step"
         attribute.label: "Attribute Export Step"
         attribute_option.label: "Attribute Option Export Step"
